[package]
name = "WakeOnLan-Telergam-bot"
version = "0.2.0"
edition = "2021"

[dependencies]
# Минимальный набор для Telegram
teloxide = { version = "0.12", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }

# Только необходимые части Tokio
tokio = { version = "1", default-features = false, features = ["rt", "macros", "time", "net", "process"] }

# Конфигурация
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }

# Работа с интерфейсами (SO_BINDTODEVICE)
socket2 = "0.5"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
